# TrustPilotChallengeRust

./: .gitignore  Cargo.toml  LICENSE  README.md  coverage.cmd
data/: hashes.txt  words-lite.txt
src/: anagram_analyzer.rs  anagram_finder.rs  anagram_logger.rs  dictionary_builder.rs  hash_computer.rs  lib.rs  main.rs  permutation_type.rs  permutations_cache.rs  read_lines.rs  solution.rs  solver.rs  vector_alphabet.rs
tests/: hash_computer_test.rs  solver_tests.rs
